fixed the spacing for category section in mobile

--- a/src/assets/scss/components/icon-list.scss
+++ b/src/assets/scss/components/icon-list.scss
@@ -67,7 +67,7 @@
 h4.category {
   color: $primary;
   margin-bottom: 0;
-  margin-top: $m;
+  margin-top: $xl;
   padding: 0 $m;
   text-transform: capitalize;
 
